Declare link accessors in TextChain
Change-Id: I2c8cc929a667f9cc59c5ec5217a2c27ca15beb2d

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,12 @@ DerivedData
 # gdb config
 /.gdbinit
 /.gdb_history
+
+# Personal scripts and text
+bpoints
+core
+makeWithDebug.sh
+papercuts.txt
+startDbg.sh
+startTest.sh
+
