Ported bin/find-unusedheaders.pl to Python
Also fixed bug which prevented .cxx and .hxx files listing

Change-Id: I67adc7c52ab5f2f1222e0756cd0087c8d9be102f

--- a/Makefile.in
+++ b/Makefile.in
@@ -399,7 +399,7 @@ findunusedcode:
 	@$(SRCDIR)/bin/findunusedcode $(SRCDIR) $(MAKE)
 
 findunusedheaders:
-	$(SRCDIR)/bin/find-unusedheaders.pl
+	$(SRCDIR)/bin/find-unusedheaders.py
 
 symbols:
 	rm -fr $(WORKDIR)/symbols/
