Remove HAVE_CXX11_REF_QUALIFIER, always true now
...after 579497164f6bddfeb14bb6b0f4b9cd3322af1803 "Bump GCC baseline to 4.8.1"

Make this a fatal configuration error for now.  The check should be removed
completely after LO 6.0 branch-off.

Change-Id: I70cf65d6b0eb7158008f28449794c66c1b775916

--- a/configure.ac
+++ b/configure.ac
@@ -6228,8 +6228,8 @@ AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[
 AC_LANG_POP([C++])
 CXXFLAGS=$save_CXXFLAGS
 AC_MSG_RESULT([$cxx11_ref_qualifier])
-if test "$cxx11_ref_qualifier" = yes; then
-    AC_DEFINE([HAVE_CXX11_REF_QUALIFIER])
+if test "$cxx11_ref_qualifier" = no; then
+    AC_MSG_ERROR([Your $CXX does not support C++11 ref-qualifiers. This is no longer supported.])
 fi
 
 dnl _Pragma support (may require C++11)
