Honor GTK theming in LO flatpak
...according to alexlarson, for now (until "eventually we'll have a sane dconf
in the sandbox") apps need to specify --filesystem=xdg-run/dconf,
--filesystem=~/.config/dconf:ro, --talk-name=ca.desrt.dconf,
--env=DCONF_USER_CONFIG_DIR=.config/dconf (where the first two are irrelevant
for LO due to its --filesystem=host).

This fixes <https://github.com/flathub/org.libreoffice.LibreOffice/issues/4>
"Libreoffice flatpak is not respecting user theme".

(cherry picked from commit 12ba14c6bee1c773e4500f79a90a07f871cf3feb)
Conflicts:
	solenv/flatpak-manifest.in

Change-Id: If5ed33e1b524bfa877b89f052c6067398b5600a3

--- a/solenv/flatpak-manifest.in
+++ b/solenv/flatpak-manifest.in
@@ -394,6 +394,7 @@
         "--socket=system-bus",
         "--socket=session-bus",
         "--filesystem=host",
+        "--env=DCONF_USER_CONFIG_DIR=.config/dconf",
         "--env=LIBO_FLATPAK=1"
     ]
 }
