--- a/config_host/config_gpgme.h.in
+++ b/config_host/config_gpgme.h.in
@@ -10,10 +10,18 @@
 /* Configuration for gpgme++.
  */
 
+#ifndef CONFIG_GPGME_H
+#define CONFIG_GPGME_H
+
 // Defined if gpgme support is available
 #define GPGME_HAVE_GPGME 0
+#if GPGME_HAVE_GPGME
+#include "config_lgpl.h"
+#endif
 
 // Defined if gpgme supports exporting minimal key.
 #define GPGME_CAN_EXPORT_MINIMAL_KEY 0
+
+#endif
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
