tdf#42949 Fix IWYU warnings in sc/inc/e*
Found with bin/find-unneeded-includes
Only removal proposals/trivial replacements are dealt with here.

Change-Id: I0ad6772012c771e8ab3f3f42af26f9ac05615771

--- a/sc/IwyuFilter_sc.yaml
+++ b/sc/IwyuFilter_sc.yaml
@@ -123,3 +123,13 @@ blacklist:
     - com/sun/star/sheet/XMembersSupplier.hpp
     - com/sun/star/util/XCloneable.hpp
     - com/sun/star/util/XRefreshable.hpp
+    sc/inc/editdataarray.hxx:
+    # base class has to be a complete type
+    - editeng/editobj.hxx
+    sc/inc/editutil.hxx:
+    # struct definition has to be a complete type
+    - svx/pageitem.hxx
+    sc/inc/eventuno.hxx:
+    # base class has to be a complete type
+    - com/sun/star/container/XNameReplace.hpp
+    - com/sun/star/lang/XServiceInfo.hpp
