--- a/include/IwyuFilter_include.yaml
+++ b/include/IwyuFilter_include.yaml
@@ -920,3 +920,13 @@ blacklist:
     - com/sun/star/awt/FontDescriptor.hpp
     - com/sun/star/style/LineSpacing.hpp
     - com/sun/star/style/TabStop.hpp
+    include/formula/FormulaOpCodeMapperObj.hxx:
+    # base class has to be a complete type
+    - com/sun/star/lang/XServiceInfo.hpp
+    - com/sun/star/sheet/XFormulaOpCodeMapper.hpp
+    include/formula/paramclass.hxx:
+    # Needed for enum type
+    - sal/types.h
+    include/formula/opcode.hxx:
+    # Needed for enum type
+    - sal/types.h
