Add distro config for iOS simulator to make building easier
Change-Id: Iff70622732792224b3c0a080f95d69f86c167ae6
Reviewed-on: https://gerrit.libreoffice.org/73370
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit b4653db6504a7e12203d5defeea536a0decf76d8)

--- a/distro-configs/LibreOfficeiOS_Sim.conf
+++ b/distro-configs/LibreOfficeiOS_Sim.conf
@@ -19,7 +19,7 @@
 --disable-database-connectivity
 --disable-dconf
 --disable-extensions
---disable-kde4
+--disable-kde5
 --disable-odk
 --disable-openssl
 --disable-pdfium
@@ -27,6 +27,6 @@
 
 --without-tls
 
-# iOS device
---host=arm64-apple-darwin
-
+# iOS simulator (debug)
+--enable-ios-simulator
+--enable-debug
