--- a/config_host/config_vclplug.h.in
+++ b/config_host/config_vclplug.h.in
@@ -10,7 +10,7 @@ Settings about which desktops have support enabled.
 #define ENABLE_GTK 0
 #define ENABLE_GTK3 0
 #define ENABLE_GTK3_KDE5 0
-#define ENABLE_KDE5 0
+#define ENABLE_KF5 0
 #define ENABLE_QT5 0
 
 #define QT5_USING_X11 0
