--- a/configure.ac
+++ b/configure.ac
@@ -2895,8 +2895,8 @@ dnl ===================================================================
 
 if test $_os = iOS; then
     AC_MSG_CHECKING([what iOS SDK to use])
-    current_sdk_ver=12.2
-    older_sdk_vers="12.1 12.0 11.4 11.2"
+    current_sdk_ver=12.4
+    older_sdk_vers="12.2 12.1 12.0 11.4 11.2"
     if test "$enable_ios_simulator" = "yes"; then
         platform=iPhoneSimulator
         versionmin=-mios-simulator-version-min=11.0
