--- a/configure.ac
+++ b/configure.ac
@@ -2714,7 +2714,7 @@ dnl ===================================================================
 dnl Check OS X SDK and compiler
 dnl ===================================================================
 
-if test $_os = Darwin -o $_os = iOS; then
+if test $_os = Darwin; then
 
     # If no --with-macosx-sdk option is given, look for one
 
@@ -2725,7 +2725,7 @@ if test $_os = Darwin -o $_os = iOS; then
     # higher than or equal to the minimum required should be found.
 
     AC_MSG_CHECKING([what Mac OS X SDK to use])
-    for _macosx_sdk in ${with_macosx_sdk-10.14 10.13 10.12}; do
+    for _macosx_sdk in ${with_macosx_sdk-10.15 10.14 10.13 10.12}; do
         MACOSX_SDK_PATH=`xcrun --sdk macosx${_macosx_sdk} --show-sdk-path 2> /dev/null`
         if test -d "$MACOSX_SDK_PATH"; then
             with_macosx_sdk="${_macosx_sdk}"
@@ -2763,8 +2763,11 @@ if test $_os = Darwin -o $_os = iOS; then
     10.14)
         MACOSX_SDK_VERSION=101400
         ;;
+    10.15)
+        MACOSX_SDK_VERSION=101500
+        ;;
     *)
-        AC_MSG_ERROR([with-macosx-sdk $with_macosx_sdk is not a supported value, supported values are 10.12--14])
+        AC_MSG_ERROR([with-macosx-sdk $with_macosx_sdk is not a supported value, supported values are 10.12--15])
         ;;
     esac
 
@@ -2802,8 +2805,11 @@ if test $_os = Darwin -o $_os = iOS; then
     10.14)
         MAC_OS_X_VERSION_MIN_REQUIRED="101400"
         ;;
+    10.15)
+        MAC_OS_X_VERSION_MIN_REQUIRED="101500"
+        ;;
     *)
-        AC_MSG_ERROR([with-macosx-version-min-required $with_macosx_version_min_required is not a supported value, supported values are 10.9--14])
+        AC_MSG_ERROR([with-macosx-version-min-required $with_macosx_version_min_required is not a supported value, supported values are 10.9--15])
         ;;
     esac
     MAC_OS_X_VERSION_MIN_REQUIRED_DOTS=$with_macosx_version_min_required
@@ -2846,8 +2852,11 @@ if test $_os = Darwin -o $_os = iOS; then
     10.14)
         MAC_OS_X_VERSION_MAX_ALLOWED="101400"
         ;;
+    10.15)
+        MAC_OS_X_VERSION_MAX_ALLOWED="101500"
+        ;;
     *)
-        AC_MSG_ERROR([with-macosx-version-max-allowed $with_macosx_version_max_allowed is not a supported value, supported values are 10.9--14])
+        AC_MSG_ERROR([with-macosx-version-max-allowed $with_macosx_version_max_allowed is not a supported value, supported values are 10.9--15])
         ;;
     esac
 
@@ -2958,8 +2967,8 @@ dnl ===================================================================
 
 if test $_os = iOS; then
     AC_MSG_CHECKING([what iOS SDK to use])
-    current_sdk_ver=12.4
-    older_sdk_vers="12.2 12.1 12.0 11.4"
+    current_sdk_ver=13.0
+    older_sdk_vers="12.4 12.2 12.1 12.0 11.4"
     if test "$enable_ios_simulator" = "yes"; then
         platform=iPhoneSimulator
         versionmin=-mios-simulator-version-min=11.0
